src/objects/CategoryManagement__mdt.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ischecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ischecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CategoryManagement</label>
    <pluralLabel>CategoryManagements</pluralLabel>
</CustomObject>